fix: formulas for loadcontainer height perfected (loadpage now covers webpage without increasing body height/affecting the scrollbar/visible content height)

--- a/main.css
+++ b/main.css
@@ -207,11 +207,18 @@ main {
 
 .loadcontainer{
   width: 100%;
-  height: 1000px;
   overflow-y: hidden;
   position: absolute;
   top: 0;
 }
+  /*MOBILE*/
+  @media screen and (max-width: 850px){
+    .loadcontainer {height: calc(350vw + 418px);}
+  }
+  /*DESKTOP*/
+  @media screen and (min-width: 850px){
+    .loadcontainer {height: calc(237vw + 427px);}
+  }
 
 .loadscreen {
   width: 100%;
@@ -297,6 +304,7 @@ section {width: 100%; height:fit-content;}
               background-repeat:no-repeat;
               background-size:cover;
             /* z-index: 3; */
+            /*height is about 3vw*/
             }
 
 /*section - mission statement content*/
